change all pages to fragment - use nav graph

--- a/app/src/main/res/layout/fragment_forget_password.xml
+++ b/app/src/main/res/layout/fragment_forget_password.xml
@@ -1,48 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-xmlns:app="http://schemas.android.com/apk/res-auto"
-android:id="@+id/forgetPassword"
-android:layout_width="match_parent"
-android:layout_height="match_parent"
-android:padding="16dp">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    tools:context=".ForgetPasswordFragment">
 
-<ImageView
-    android:id="@+id/sign_in_image"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:layout_gravity="center_horizontal"
-    app:srcCompat="@drawable/forget_password_icon"
-    app:layout_constraintBottom_toTopOf="@+id/forget_password_title"
-    app:layout_constraintEnd_toEndOf="parent"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toTopOf="parent" />
+    <ImageView
+        android:id="@+id/sign_in_image"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        app:srcCompat="@drawable/forget_password_icon"
+        app:layout_constraintBottom_toTopOf="@+id/forget_password_title"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
-<TextView
-    android:id="@+id/forget_password_title"
-    style="@style/AppTextStyle"
-    android:layout_width="0dp"
-    android:layout_height="wrap_content"
-    android:gravity="center_horizontal|top"
-    android:text="@string/forget_password_title"
-    android:textAppearance="@style/log_in_text"
-    android:textStyle="bold"
-    app:layout_constraintEnd_toEndOf="parent"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toBottomOf="@id/sign_in_image" />
+    <TextView
+        android:id="@+id/forget_password_title"
+        style="@style/AppTextStyle"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:gravity="center_horizontal|top"
+        android:text="@string/forget_password_title"
+        android:textAppearance="@style/log_in_text"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/sign_in_image" />
 
-<TextView
-    android:id="@+id/forget_password_description"
-    style="@style/AppTextStyle"
-    android:layout_width="0dp"
-    android:textSize="18sp"
-    android:layout_height="wrap_content"
-    android:gravity="center_horizontal|top"
-    android:text="@string/instructions_forget_password"
-    android:textAppearance="@style/sign_in_description"
-    android:textStyle="bold"
-    app:layout_constraintEnd_toEndOf="parent"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toBottomOf="@id/forget_password_title" />
+    <TextView
+        android:id="@+id/forget_password_description"
+        style="@style/AppTextStyle"
+        android:layout_width="0dp"
+        android:textSize="18sp"
+        android:layout_height="wrap_content"
+        android:gravity="center_horizontal|top"
+        android:text="@string/instructions_forget_password"
+        android:textAppearance="@style/sign_in_description"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/forget_password_title" />
 
     <include
         android:id="@+id/email_group"
