--- a/app/src/main/res/layout/fragment_group_profile.xml
+++ b/app/src/main/res/layout/fragment_group_profile.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:backgroundTint="@color/white"
-    tools:context=".GroupProfile">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    tools:context=".GroupProfileFragment">
 
     <ImageView
         android:id="@+id/group_profile_background_image"
@@ -44,10 +43,10 @@
             app:layout_constraintTop_toTopOf="parent">
 
             <LinearLayout
-                android:layout_width="110dp"
-                android:layout_height="110dp"
-                android:background="@drawable/collage_logo"
-                android:orientation="vertical"></LinearLayout>
+            android:layout_width="110dp"
+            android:layout_height="110dp"
+            android:background="@drawable/collage_logo"
+            android:orientation="vertical"/>
         </androidx.cardview.widget.CardView>
 
         <androidx.constraintlayout.widget.ConstraintLayout
