--- a/app/src/main/res/layout/custom_input_field_email.xml
+++ b/app/src/main/res/layout/custom_input_field_email.xml
@@ -3,7 +3,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="100sp">
+    android:layout_height="100sp"
+    android:paddingRight="15dp"
+    android:paddingLeft="15dp">
 
     <TextView
         android:id="@+id/edit_text_label"
