--- a/app/src/main/res/layout/custom_input_field_password.xml
+++ b/app/src/main/res/layout/custom_input_field_password.xml
@@ -2,7 +2,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="100sp">
+    android:layout_height="100sp"
+    android:paddingRight="15dp"
+    android:paddingLeft="15dp">
 
     <TextView
         android:id="@+id/edit_text_label"
@@ -38,4 +40,17 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/edit_text_field" />
+
+    <!-- Error message in red text -->
+    <TextView
+        android:id="@+id/error_message"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="4dp"
+        android:text=""
+        android:textColor="@color/red"
+        android:visibility="invisible"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/edit_text_line" />
 </androidx.constraintlayout.widget.ConstraintLayout>
