--- a/app/src/main/res/layout/custom_input_field_text.xml
+++ b/app/src/main/res/layout/custom_input_field_text.xml
@@ -2,15 +2,18 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="100sp">
+    android:layout_height="100sp"
+    android:paddingRight="15dp"
+    android:paddingLeft="15dp">
 
     <TextView
         android:id="@+id/edit_text_label"
         android:layout_width="0dp"
-        android:layout_height="30dp"
+        android:layout_height="25dp"
         android:text=""
         android:gravity="top"
         style="@style/AppTextStyle"
+        android:textColor="@color/Dark_Gray"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
@@ -18,7 +21,7 @@
     <EditText
         android:id="@+id/edit_text_field"
         android:layout_width="0dp"
-        android:layout_height="30dp"
+        android:layout_height="25dp"
         android:background="@null"
         android:gravity="top"
         android:inputType="text"
@@ -38,4 +41,16 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/edit_text_field" />
+
+    <TextView
+        android:id="@+id/error_message"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="4dp"
+        android:text=""
+        android:textColor="@color/red"
+        android:visibility="invisible"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/edit_text_line" />
 </androidx.constraintlayout.widget.ConstraintLayout>
