--- a/app/src/main/res/layout/fragment_sign_up_company.xml
+++ b/app/src/main/res/layout/fragment_sign_up_company.xml
@@ -58,31 +58,55 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/company_name_group" />
 
-
-    <com.google.android.material.textfield.TextInputLayout
+    <TextView
         android:id="@+id/input_suggestions"
-        android:layout_width="320dp"
-        android:layout_height="43dp"
-        android:layout_marginTop="28dp"
-        android:background="@drawable/rounded_box"
-        android:backgroundTint="#E8E8E8"
+        style="@style/AppTextStyle"
+        android:layout_width="0dp"
+        android:layout_height="25dp"
+        android:paddingLeft="15dp"
+        android:paddingRight="15dp"
+        android:gravity="top"
+        android:text="@string/address"
+        android:textColor="@color/Dark_Gray"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/email_group"/>
+
+
+    <AutoCompleteTextView
+        android:id="@+id/companySuggestion"
+        style="@style/AppTextStyle"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_marginStart="8dp"
+        android:paddingLeft="15dp"
+        android:paddingRight="15dp"
+        app:layout_constraintTop_toBottomOf="@+id/input_suggestions" />
+
+    <View
+        android:id="@+id/add_edit_text_line"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_marginStart="8dp"
         android:paddingLeft="20dp"
-        app:boxStrokeWidth="0dp"
+        android:paddingRight="20dp"
+        android:background="@color/Light_Gray"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/email_group">
+        app:layout_constraintTop_toBottomOf="@+id/companySuggestion" />
+    <TextView
+        android:id="@+id/add_error_message"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="4dp"
+        android:text=""
+        android:textColor="@color/red"
+        android:visibility="invisible"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/add_edit_text_line" />
 
-        <AutoCompleteTextView
-            android:id="@+id/companySuggestion"
-            android:layout_width="match_parent"
-            android:layout_height="39dp"
-            android:hint="Address.."
-            app:layout_constraintTop_toBottomOf="@+id/email_group"
-            tools:layout_editor_absoluteX="5dp">
-
-        </AutoCompleteTextView>
-
-    </com.google.android.material.textfield.TextInputLayout>
     <include
         android:id="@+id/password_group"
         layout="@layout/custom_input_field_password"
@@ -92,7 +116,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/input_suggestions" />
+        app:layout_constraintTop_toBottomOf="@id/add_error_message" />
 
     <Button
         android:id="@+id/sign_up_company_btn"
