--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,10 +7,13 @@
     <color name="teal_700">#FF018786</color>
     <color name="white">#FFFFFFFF</color>
     <color name="Light_Gray">#D9D9D9</color>
+    <color name="Dark_Gray">#5A5A5A</color>
     <color name="gray">#BAB7B7</color>
     <color name="dark_blue">#030446</color>
     <color name="silver">#BAB7B7</color>
     <color name="black">#000000</color>
     <color name="pink">#B3EE706B</color>
     <color name="light_white">#FCFCFC</color>
+    <color name="red">#ff0033</color>
+
 </resources>
