--- a/app/src/main/res/layout/fragment_sign_up_company.xml
+++ b/app/src/main/res/layout/fragment_sign_up_company.xml
@@ -8,7 +8,7 @@
     tools:context=".SignUpCompanyFragment">
 
     <TextView
-        android:id="@+id/new_post_title"
+        android:id="@+id/new_account_student"
         style="@style/AppTextStyle"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
@@ -21,7 +21,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/new_post_sub_title"
+        android:id="@+id/create_student_title"
         style="@style/AppTextStyle"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
@@ -31,9 +31,8 @@
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/new_post_title" />
+        app:layout_constraintTop_toBottomOf="@id/new_account_student" />
     <!--Start Body-->
-
 
     <include
         android:id="@+id/company_name_group"
@@ -44,8 +43,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/new_post_sub_title" />
-
+        app:layout_constraintTop_toBottomOf="@id/create_student_title" />
 
     <include
         android:id="@+id/email_group"
@@ -73,15 +71,18 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/email_group"/>
 
-
     <AutoCompleteTextView
         android:id="@+id/companySuggestion"
         style="@style/AppTextStyle"
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
         android:paddingLeft="15dp"
         android:paddingRight="15dp"
+        app:layout_constraintBottom_toTopOf="@+id/add_error_message"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/input_suggestions" />
 
     <View
@@ -108,6 +109,17 @@
         app:layout_constraintTop_toBottomOf="@+id/add_edit_text_line" />
 
     <include
+        android:id="@+id/bio_group"
+        layout="@layout/custom_input_field_text"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="15dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/add_error_message" />
+
+    <include
         android:id="@+id/password_group"
         layout="@layout/custom_input_field_password"
         android:layout_width="0dp"
@@ -116,7 +128,18 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/add_error_message" />
+        app:layout_constraintTop_toBottomOf="@id/bio_group" />
+
+    <ImageView
+        android:id="@+id/logo_company"
+        android:layout_width="189dp"
+        android:layout_height="137dp"
+        android:src="@drawable/company_icon"
+        app:layout_constraintBottom_toTopOf="@+id/sign_up_company_btn"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/bio_group"
+        app:layout_constraintVertical_bias="0.821" />
 
     <Button
         android:id="@+id/sign_up_company_btn"
@@ -132,6 +155,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/password_group" />
+        app:layout_constraintTop_toBottomOf="@+id/password_group"
+        app:layout_constraintVertical_bias="0.841" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
